--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "eslint": "^5.1.0",
     "flow-bin": "^0.76.0",
     "fuzzy": "^0.1.3",
-    "inquirer": "^6.0.0",
     "istanbul": "^0.4.5",
     "lodash": "^4.17.4",
     "mocha": "^5.0.0",
@@ -34,7 +33,8 @@
     "chalk": "^2.0.0",
     "figures": "^2.0.0",
     "lodash.debounce": "^4.0.8",
-    "run-async": "^2.3.0"
+    "run-async": "^2.3.0",
+    "inquirer": ">=5.0.0"
   },
   "peerDependencies": {
     "inquirer": "^5.0.0 || ^6.0.0"
